Fix CSS and improve theme spacing

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -39,7 +39,7 @@ $header-height: 30px;
 			display: none;
 		}
 		>li{
-			margin-left: 50px;
+			margin-left: 40px;
 			@include inline-block;
 			@media screen and (max-width: 1040px){
 				margin-left: 0;
