--- a/sass/parts/_post.scss
+++ b/sass/parts/_post.scss
@@ -1,6 +1,6 @@
 .post{
 	h2.title, .entry-content{
-		margin-left: 200px;
+		margin-left: 220px;
 		@media screen and (max-width: 800px){
 			margin-left: 0;
 		}
